# verifone_assgn_service

./: gradle.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/prajwal/analyticsserviceapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/prajwal/analyticsservice/: AnalyticsData.aidl  IAnalyticsService.aidl
app/src/main/cpp/: Sign_Utils.cpp
app/src/main/java/com/prajwal/analyticsservice/: AnalyticsData.kt
app/src/main/java/com/prajwal/analyticsserviceapp/: AnalyticsService.kt
app/src/main/java/com/prajwal/analyticsserviceapp/native/: SignatureVerifier.kt
app/src/test/java/com/prajwal/analyticsserviceapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
